# 2048

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
src/: app.rs
src/app/: components.rs
src/app/components/: board_row.rs  button.rs  cell_container.rs  game_board.rs  game_cell.rs  game_tile.rs  score_counter.rs  tile_container.rs  tile_form.rs  tile_move.rs  topbar.rs
src/app/contexts/: score.rs
