[package]
name = "game-2048"
version = "0.1.0"
edition = "2021"
description = "A copy of the 2048 game written in Rust"
readme = "README.md"
repository = "https://github.com/lamabro23/2048"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "2048"]
categories = ["gui", "wasm", "web-programming", "game"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
gloo = "0.9.0"
log = "0.4.19"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["DomTokenList"] }
yew = { version = "0.20", features = ["csr"] }
